Fix background color of code snippets with horizontal scrolling (#114)
* fix

* fix

--- a/_scss/skeleton.scss
+++ b/_scss/skeleton.scss
@@ -316,6 +316,7 @@ code {
   border-radius: 4px; }
 pre > code {
   display: block;
+  overflow: auto; // fix background color for code blocks with horizontal scrolling
   padding: 1rem 1.5rem;
   white-space: pre; }
 
